syntax = "proto3";

package structures;
option go_package = "github.com/ApostolDmitry/vpner/proto;proto";

message UnblockInfo {
    string type_name = 1;
    string chain_name = 2;
    repeated string rules = 3;
}

message VpnInfo {
    string id = 1;
    string type = 2;
    string description = 3;
    enum state {
        UP = 0;
        DOWN = 1;
    }
}